--- a/package.json
+++ b/package.json
@@ -5,29 +5,29 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "antd": "^5.11.5",
+    "antd": "^5.12.1",
     "dayjs": "^1.11.10",
     "i18next": "^23.7.7",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sanitize.css": "^13.0.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.1",
-    "sanitize.css": "^13.0.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.41",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.13.1",
-    "@typescript-eslint/parser": "^6.13.1",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "connect-history-api-fallback": "^2.0.0",
     "eslint": "^8.55.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -35,7 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "sass": "^1.69.5",
     "typescript": "^5.3.2",
-    "vite": "^5.0.4",
+    "vite": "^5.0.5",
     "vite-plugin-checker": "^0.6.2",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.1"
